--- a/index.html
+++ b/index.html
@@ -8,25 +8,35 @@
   </head>
   <body class="debug">
     <!-- Header -->
-    <header id="navbar" class="container">
-      <div class="logo">logo</div>
+    <header>
+        <div id="navbar" class="container d-flex">
+      <div class="logo"><img src="./assets/img/logo.svg" alt="Immagine del Logo Discord"></div>
       <div class="nav_links">
         <ul>
-          <li><a href="#">link</a></li>
-          <li><a href="#">link</a></li>
-          <li><a href="#">link</a></li>
-          <li><a href="#">link</a></li>
-          <li><a href="#">link</a></li>
+          <li><a href="#">Scarica</a></li>
+          <li><a href="#">Perché Discord</a></li>
+          <li><a href="#">Nitro</a></li>
+          <li><a href="#">Sicurezza</a></li>
+          <li><a href="#">Assistenza</a></li>
         </ul>
       </div>
-      <div class="login_button"><!-- <button> -->login<!-- </button> --></div>
+      <div class="login_button"><button class="bottone_accedi">Accedi</button></div>
+    </div>
     </header>
     <!-- END Header -->
     <main>
       <!-- section JUMBOTRON -->
-      <section id="jumbotron" class="container">
-        <div class="jumbotron_box">JUMBOTRON</div>
-      </section>
+      <div id="jumbotron" class="container">
+        <div class="jumbotron_box text_color_white">
+            <h1>Il tuo posto per parlare</h1>
+            <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo
+                assieme. Discord rende più facile chiacchierare oani ajorno e ritrovarsi più spesso.</p>
+                <div class="d-flex down_open_disc">
+                <button>Scarica per Mac</button>
+                <button class="button_open_discor_brows text_color_white">Apri Discord nel tuo browser</button>
+                </div>
+        </div>
+      </div>
       <!-- END JUMBOTRON -->
       <!-- section INVITE_ONLY -->
       <section id="invite_only" class="container">
@@ -58,15 +68,15 @@
       </section>
       <!-- END TECNOLOGY -->
       <!-- section FOOTER -->
-      <footer id="footer"" class="container">
+      <footer id="footer" class="container">
         <div class="footer_box">
           <div class="footer_large_box">foot Large box</div>
           <div class="footer_strict_box">foot strict box</div>
           <div class="footer_strict_box">foot strict box</div>
           <div class="footer_strict_box">foot strict box</div>
           <div class="footer_strict_box">foot strict box</div>
-        </div">
-       <!--  <hr> -->
+        </div>
+        <hr>
         <div class="containerrrrr">
           <!-- <div class="logo">logo</div>
           <div class="bottone"><button>Bottone</button> 
