--- a/index.html
+++ b/index.html
@@ -1,24 +1,50 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body class="debug">
-  <header>
-  <div class="container d-flex">
-    <div class="logo"><img src="./assets/img/logo.svg" alt="Immagine del Logo Discord"></div>
-    <div class="navbar d-flex"> 
-      <a href="#">Scarica</a>
-      <a href="#">Perché Discord</a>
-      <a href="#">Nitro</a>
-      <a href="#">Sicurezza</a>
-      <a href="#">Assistenza</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body class="debug">
+    <!-- HEADER -->
+    <header>
+      <div class="container d-flex">
+        <!-- Logo -->
+        <div class="logo">
+          <img src="./assets/img/logo.svg" alt="Immagine del Logo Discord" />
+        </div>
+        <!-- /Logo -->
+        <!-- Navbar with link -->
+        <div class="navbar d-flex">
+          <a href="#">Scarica</a>
+          <a href="#">Perché Discord</a>
+          <a href="#">Nitro</a>
+          <a href="#">Sicurezza</a>
+          <a href="#">Assistenza</a>
+        </div>
+        <!-- /Navbar -->
+        <!-- Login Button -->
+        <div class="login"><button class="login_button">Accedi</button></div>
       </div>
-    <div class="login"><button class="login_button">Accedi</button></div>
-  </div>
-</header>
-</body>
+      <!-- /Login Button -->
+      <!-- /HEADER -->
+    </header>
+    <!-- ----JUMBOTRON----- -->
+    <section id="jumbotron">
+      <div class="container content_jumbotron">
+        <h1>Il tuo posto per parlare</h1>
+        <p>
+          Che tu faccia parte di un club scolastico, gruppo di gamer, comunità
+          artistica mondiale, o semplicemente di un piccolo gruppo di amici che
+          vuole passare il tempo assieme. Discord rende più facile chiacchierare
+          oani ajorno e ritrovarsi più spesso.
+        </p>
+        <div class="container d-flex button_jumbotron">
+          <button class="button_left_jumbotron">Scarica per Mac</button>
+          <button class="button_right_jumbotron">Apri Discord nel tuo browser</button>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
